# calendar_scheduler_backend

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
config/: api_v1.py  asgi.py  renderers.py  urls.py  wsgi.py
config/settings/: base.py  local.py
domain/: paths.py
domain/account/: apps.py
domain/account/controllers/: __init__.py  account.py  auth.py
domain/account/migrations/: 0001_initial.py
domain/account/models/: user.py
domain/account/schemes/: account.py  user.py
domain/schedule/: api.py  apps.py  filters.py
domain/schedule/controllers/: schedule.py
domain/schedule/migrations/: 0001_initial.py  0002_alter_event_is_all_day.py  0002_schedule_owner.py
domain/schedule/models/: event.py  schedule.py
domain/schedule/schemes/: event.py  schedule.py
util/: schemes.py
