[tool.poetry]
name = "calendar-scheduler-backend"
version = "0.1.0"
description = ""
authors = ["Seung-Yoon Oh <feynubrick@proton.me>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
django-ninja = "^1.3.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.8.0"
pyhumps = "^3.8.0"
orjson = "^3.10.7"
django-ninja-jwt = "^5.3.3"
django-ninja-extra = "^0.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
